# pyrestkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: ai.md  architecture.md  authentication.md  configuration.md  examples.md  providers.md  validation.md
pyrestkit/: __init__.py  _version.py
pyrestkit/ai/: __init__.py  analyzer.py  client.py  config.py  exceptions.py  models.py  provider.py
pyrestkit/ai/config/: __init__.py  ai_config.py
pyrestkit/ai/prompts/: failure_analysis.md
pyrestkit/ai/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  bedrock.py  cohere.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py
pyrestkit/ai/utils/: prompt_loader.py
pyrestkit/assertions/: response_assertions.py
pyrestkit/auth/: __init__.py  authentication_manager.py  token_cache.py  token_manager.py  token_provider.py
pyrestkit/auth/strategies/: __init__.py  api_key_auth.py  basic_auth.py  bearer_auth.py
pyrestkit/builder/: fluent_request_builder.py
pyrestkit/clients/: base_client.py  user_client.py
pyrestkit/config/: __init__.py  config.py  uat.json
pyrestkit/core/: __init__.py  api_client.py  request_builder.py  request_executor.py  session_manager.py
pyrestkit/endpoints/: __init__.py  base_endpoints.py  order_endpoints.py  payment_endpoints.py  user_endpoints.py
pyrestkit/exceptions/: __init__.py  api_exception.py  authentication_exception.py  configuration_exception.py  exception_mapper.py  network_exception.py  response_exception.py  serialization_exception.py  validation_exception.py
pyrestkit/factories/: __init__.py  base_factory.py  user_factory.py
pyrestkit/hooks/: __init__.py  hook.py  hook_manager.py  request_hook.py  response_hook.py  timing_hook.py
pyrestkit/models/: __init__.py  base_response.py
pyrestkit/models/request/: __init__.py
pyrestkit/models/response/: __init__.py  create_user_response.py  get_user_response.py
pyrestkit/pipeline/: __init__.py  middleware.py  middleware_chain.py  pipeline.py  request_context.py
pyrestkit/response/: __init__.py  framework_response.py  response_body.py
pyrestkit/retry/: __init__.py  retry_handler.py  retry_policy.py
pyrestkit/serializers/: response_mapper.py
pyrestkit/types/: model_protocol.py
pyrestkit/validators/: __init__.py  response_validator.py  schema_validator.py
schemas/: create_user.json  error_response.json  get_user.json
src/assertions/: __init__.py  assertion_exception.py  response_assertions.py
src/auth/: auth_strategy.py  authentication_manager.py  bearer_auth.py  token_cache.py  token_manager.py  token_provider.py  token_response.py
src/auth/strategies/: api_key_auth.py  basic_auth.py  bearer_auth.py
src/builder/: __init__.py  fluent_request_builder.py
src/clients/: __init__.py  base_client.py  user_client.py
src/config/: config.py  dev.json  qa.json
src/core/: api_client.py  logger.py  request_builder.py  request_executor.py  session_manager.py
src/endpoints/: base_endpoints.py  order_endpoints.py  payment_endpoints.py  user_endpoints.py
src/exceptions/: api_exception.py  authentication_exception.py  configuration_exception.py  exception_mapper.py  network_exception.py  response_exception.py  serialization_exception.py  validation_exception.py
src/factories/: __init__.py  user_factory.py
src/hooks/: hook.py  hook_manager.py  timing_hook.py
src/mapper/: response_mapper.py
src/models/request/: create_user_request.py  update_user_request.py
src/models/response/: create_user_response.py  get_user_response.py  user_response.py
src/pipeline/: middleware.py  middleware_chain.py  pipeline.py
src/response/: framework_response.py  response_body.py
src/retry/: __init__.py  backoff.py  retry_handler.py
src/serializers/: response_mapper.py
src/validators/: response_validator.py  schema_validator.py
tests/: conftest.py  fake_token_provider.py  test_api_client.py  test_api_key_auth.py  test_authentication_manager.py  test_basic_auth.py  test_bearer_auth.py  test_config.py  test_endpoints_and_clients.py  test_exception_mapper.py  test_logger.py  test_pipeline.py  test_pipeline_and_hooks.py  test_response_mapper.py  test_response_mapping.py  test_response_validator.py  test_session_manager.py  test_token_manager.py  test_user_client.py  test_user_endpoints.py
tests/ai/: test_ai_client.py  test_ai_config.py  test_failure_analyzer.py  test_openai_provider.py  test_prompt_loader.py  test_provider_error_paths.py  test_provider_implementations.py
tests/assertions/: test_json_assertion.py  test_json_contains_assertion.py  test_json_count_assertion.py  test_response_assertions.py  test_response_time_assertions.py  test_schema_assertions.py
tests/auth/: test_api_key_auth.py  test_authentication_manager.py  test_basic_auth.py  test_bearer_auth.py  test_token_cache.py  test_token_manager.py
tests/builder/: test_fluent_request_builder.py
tests/clients/: test_user_client.py  test_user_endpoints.py
tests/core/: test_api_client.py  test_session_manager.py
tests/factories/: test_user_factory.py
tests/pipeline/: test_pipeline.py
tests/response/: test_framework_response_models.py  test_list_serialization.py  test_model_serialization.py  test_response_body.py
tests/retry/: test_retry_handler.py  test_retry_policy.py
tests/validators/: test_response_validator.py  test_schema_validator.py
