[project]
name = "pyrestkit"
version = "1.0.1"
description = "Modern Python REST API Automation Toolkit"

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"

warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true

strict_equality = true

pretty = true

exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
]
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "requests_mock",
    "requests_mock.*",
]

disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "jsonschema"

ignore_missing_imports = true

[tool.pytest.ini_options]

testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

python_functions = [
    "test_*",
]

addopts = """
-v
-ra
--strict-markers
--strict-config
--cov=src
--cov-report=term-missing
--cov-report=html
--cov-report=xml
"""

[tool.coverage.run]
source = [
    "src",
]

branch = true

omit = [
    "tests/*",
]

[tool.coverage.report]

show_missing = true

skip_empty = true

precision = 2

fail_under = 90

[tool.coverage.html]

directory = "htmlcov"