[build-system]
requires = [
    "setuptools>=80",
    "wheel",
    "setuptools-scm[toml]>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "pyrestkit"
dynamic = ["version"]
description = "Modern Python REST API Automation Toolkit With AI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Raushan Raj" }
]

keywords = [
    "api",
    "rest",
    "automation",
    "testing",
    "pytest",
    "framework",
    "qa",
    "sdet",
    "ai",
    "llm",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",    
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "jsonschema>=4.23.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[tool.setuptools_scm]
write_to = "pyrestkit/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "boto3>=1.34.0",
    "google-generativeai>=0.7.0",
    "mistralai>=1.0.0",
    "cohere>=5.0.0"
]

all = [
    "pyrestkit[ai]"
]


[project.urls]
Homepage = "https://github.com/Raushanraj77/pyrestkit"
Repository = "https://github.com/Raushanraj77/pyrestkit"
Issues = "https://github.com/Raushanraj77/pyrestkit/issues"


# ----------------------------
# SETUPTOOLS CONFIG
# ----------------------------

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["pyrestkit*"]
exclude = [
    "tests*",
]


[tool.setuptools.package-data]
pyrestkit = [
    "ai/prompts/*.md"
]


# ----------------------------
# RUFF
# ----------------------------

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


# ----------------------------
# MYPY
# ----------------------------

[tool.mypy]
python_version = "3.13"

warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true

strict_equality = true
pretty = true

exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "requests_mock",
    "requests_mock.*",
]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "jsonschema"
ignore_missing_imports = true


# ----------------------------
# COVERAGE
# ----------------------------

[tool.coverage.run]
source = ["pyrestkit"]
branch = true
omit = [
    "tests/*",
    "pyrestkit/endpoints/order_endpoints.py",
    "pyrestkit/endpoints/payment_endpoints.py",
    "pyrestkit/hooks/request_hook.py",
    "pyrestkit/hooks/response_hook.py",
    "pyrestkit/hooks/timing_hook.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"